# Rationals

./: .gitignore  compare_2d_solvers.ipynb  compare_solvers.py  compare_solvers_playground.ipynb  params.toml  requirements.txt  solverFrac.py  timing_results.csv
Benchmarking/: Bench.py  benchmark_ozaki.py  benchmark_ozaki_matmult.py
BigIntFixedPoint/: .gitignore  README.MD  pyproject.toml
BigIntFixedPoint/src/BigIntFixedPoint/: __init__.py  factory.py  kernels.py  model.py
Comparison_Tools/: basic_crt.py
ExperamentalSchemes/: Fixed_Point_Demo.ipynb
ExperamentalSchemes/VectorFormat/: GPUOptimizedVectorized.py  VectorizedFP.py
GEMMul8/jax/: Makefile  gemmul8_jax.cu  gemmul8_jax.py  test_gemm.cpp  test_gemmul8_jax.py
Ozaki_Scheme_1/: ozaki_v1.py  triton_kernel_v1.py
Ozaki_Scheme_2/: Ozaki_Scheme_2_Jax.py  ozaki_v2.py  triton_mod_matmul.py
Solvers/FP64/: parfile
output_sowave/: wave.xdmf  wave_00000.h5  wave_00005.h5  wave_00010.h5  wave_00015.h5  wave_00020.h5  wave_00025.h5  wave_00030.h5  wave_00035.h5  wave_00040.h5  wave_00045.h5  wave_00050.h5  wave_00055.h5  wave_00060.h5  wave_00065.h5  wave_00070.h5  wave_00075.h5  wave_00080.h5  wave_00085.h5  wave_00090.h5  wave_00095.h5  wave_00100.h5  wave_00105.h5  wave_00110.h5  wave_00115.h5  wave_00120.h5  wave_00125.h5  wave_00130.h5  wave_00135.h5  wave_00140.h5  wave_00145.h5  wave_00150.h5  wave_00155.h5  wave_00160.h5  wave_00165.h5  wave_00170.h5  wave_00175.h5  wave_00180.h5  wave_00185.h5  wave_00190.h5  (+602 more)
utils/: configs.py  eqs.py  finitederivs.py  fixed_point.py  grid.py  ioxdmf.py  sowave.py
(+1035 files in other folders)
