[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bigint-fixed-point"
version = "0.1.0"
description = "A GPU accelerated large integer fixed point library"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Isaac Sudweeks" }
]

dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy>=1.20.0",
]
[tool.setuptools.packages.find]
where = ["src"]
